objects/sumoapp__Availability__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__Group__c</fullName>
        <label>Group</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Activation indicator. If true then will be included to WHEN page algorithm, if flase then not</inlineHelpText>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>sumoapp__Location__c</referenceTo>
        <relationshipLabel>Location Availabilities</relationshipLabel>
        <relationshipName>LocationAvailabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Availabilities</relationshipLabel>
        <relationshipName>UserAvailabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SUMO Availability</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Availabilities</pluralLabel>
    <recordTypes>
        <fullName>sumoapp__DateSpecific</fullName>
        <active>true</active>
        <description>Date specific availability</description>
        <label>Date Specific</label>
    </recordTypes>
    <recordTypes>
        <fullName>sumoapp__Recurring</fullName>
        <active>true</active>
        <description>Recurring availability</description>
        <label>Recurring</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>